--- a/converter/src/main/resources/application.properties
+++ b/converter/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #==== connect to mysql ======#
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/converter_db?useSSL=false
-spring.datasource.username={your database username}
-spring.datasource.password={your database password}
+spring.datasource.username=your db username
+spring.datasource.password=your db password
 
