--- a/converter/src/main/resources/application.properties
+++ b/converter/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #==== connect to mysql ======#
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/converter_db?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/converter_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=your db username
 spring.datasource.password=your db password
 
